# tri.oo.ai

./: .gitignore  README.md  main.py  main_api.py  pyproject.toml  serve.sh
src/: agent.py  agent_api.py  parser.py  tools.py  types.py
